--- a/index.html
+++ b/index.html
@@ -562,8 +562,10 @@
   <script src="js/contact_me.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="js/freelancer.min.js"></script>
-
+    <script src="js/freelancer.min.js"></script>
+  <script>
+   alert(1);
+  </script>
 </body>
 
 </html>
