--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           <p class="lead">I am a Full Stack Web Developer. I started web development and programming since 2014 and I already made a lot of web applications, and windows based application using Visual Basic .NET, and also 3 mobile apps based on ionic framework, I follow the best practices in programming.</p>
         </div>
         <div class="col-lg-4 mr-auto">
-          <p class="lead">Following are the programming languages and framework that I used: Bootstrap, HTML,CSS,JavaScript, jQuery, AngularJS, PHP, MySQL, SQL Server, Microsoft Access Database, VB.NET. And now I am currently Learning Flutter <i class='text-primary fa fa-smile'></i></p>
+          <p class="lead">Following are the programming languages and framework that I used: Bootstrap, HTML,CSS,JavaScript, jQuery, AngularJS, PHP, MySQL, SQL Server, Microsoft Access Database, VB.NET. And now I am currently Learning Flutter <i class='far fa-smile'></i></p>
         </div>
       </div>
 
